[package]
name = "georaster"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"

description = "Rust library for accessing geospatial raster images."
homepage = "https://github.com/pka/georaster"
repository = "https://github.com/pka/georaster"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["tiff", "geo"]
categories = ["science::geo", "multimedia::images"]
exclude = [
    "data",    
]

[dependencies]
geo = { version = "0.28.0", optional = true }
tiff = "0.9.1"

[dev-dependencies]
image = "0.24.7"
http-range-client = "0.7.2"
env_logger = "0.10.0"

[features]
geo-crate = ["dep:geo"]
