[package]
name = "georaster"
version = "0.2.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"

description = "Rust library for accessing geospatial raster images."
homepage = "https://github.com/pka/georaster"
repository = "https://github.com/pka/georaster"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["tiff", "geo"]
categories = ["science::geo", "multimedia::images"]
exclude = ["data"]

[features]
geo-crate = ["dep:geo"]
geodesy-crate = ["dep:geodesy"]

[dependencies]
geo = { version = "0.30.0", optional = true }
geodesy = { version = "0.13.0", optional = true }
tiff = "0.9.1"

[dev-dependencies]
image = "0.25.2"
http-range-client = "0.9.0"
env_logger = "0.11.5"
