[package]
name = "georaster"
version = "0.2.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"

description = "Rust library for accessing geospatial raster images."
homepage = "https://github.com/pka/georaster"
repository = "https://github.com/pka/georaster"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["tiff", "geo"]
categories = ["science::geo", "multimedia::images"]
exclude = ["data"]

[features]
pmtiles = ["dep:pmt", "tile-grid", "dep:image"]
geo = ["dep:geo"]
geodesy = ["dep:geodesy"]

[dependencies]
geo = { version = "0.30.0", optional = true }
geodesy = { version = "0.13.0", optional = true }
image = { version = "0.25.2", optional = true }
pmt = { package = "pmtiles", version = "0.15.0", optional = true, default-features = false, features = [
    "mmap-async-tokio",
] }
thiserror = "2.0.12"
tiff = "0.9.1"
tile-grid = { version = "0.6.2", optional = true }

[dev-dependencies]
env_logger = "0.11.5"
http-range-client = "0.9.0"
image = "0.25.2"
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
